compiler/tests/should-fail/IntegrityChangingDeclassification.via
/* IntegrityChangingDeclassificationError */

fun main() {
    val result: int = declassify 42 from {a} to {(a ∧ b)<-};
}

host a
host b
